# cp2077-crossover-mod-manager

./: .editorconfig  .env.example  .gitignore  APPLE_DISTRIBUTION.md  ARCHIVE_SUPPORT.md  CHANGELOG.md  CI_CD.md  CROSSOVER_COMPATIBILITY.md  DISK_SPACE_CHECKING.md  FEATURES.md  MAGIC_BYTES_FIX.md  NXM_Handler.scpt  QUICK_CICD_REFERENCE.md  README.md  RED4EXT_COMPATIBILITY.md  RELEASE_v1.3.0.md  RUN_WITH_DEBUG.md  UNICODE_VERIFICATION.md  index.html  package-lock.json  package.json  register-protocol.sh  vite.config.js
.github/workflows/: build.yml  release.yml
scripts/: release.sh
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive_extractor.rs  main.rs  mod_manager.rs  nexusmods_api.rs  settings.rs
src/components/: AppFooter.css  AppFooter.jsx  ConfirmDialog.css  ConfirmDialog.jsx  DevRelayOverlay.css  DevRelayOverlay.jsx  InstallOverlay.css  InstallOverlay.jsx  JackInOverlay.css  JackInOverlay.jsx  Logs.css  Logs.jsx  Manifest.css  Manifest.jsx  ModDetails.css  ModDetails.jsx  ModList.css  ModList.jsx  Settings.css  Settings.jsx  SplashScreen.css  SplashScreen.jsx  SyncOverlay.css  SyncOverlay.jsx  SyncTerminal.jsx
