[package]
name = "crossover-mod-manager"
version = "1.0.0"
description = "Nexus Mod Manager for CP2077 on Mac via Crossover"
authors = ["Benjamin Eccles"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "fs-all", "http-all", "shell-open", "protocol-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
