[package]
name = "crossover-mod-manager"
version = "1.3.0"
description = "Nexus Mod Manager for CP2077 on Mac via Crossover"
authors = ["Benjamin Eccles"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
sevenz-rust = "0.6"
unrar = "0.5"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
